2002-05-26  Derek Atkins   <derek@ihtfp.com>

	* src/gnome-util/dialog-options.[ch]: Create an option-type
	database so that modules can define new option-types and plug them
	into Gnucash.  Break apart the existing "if type == blah; else if
	type == blah blah..." code and use the new options-type database.
	New options require the implementation of three functions,
	set_widget(), set_value(), and get_value().
	
2002-05-24  Derek Atkins   <derek@ihtfp.com>

	* src/engine/GNCId.c: Implement xaccForeachEntity() as a which
	allows a traversal of all entities of a particular type.

	* Register GncObject_t descriptions for Splits, Transactions, and
	Accounts.  Move the QueryObject definitions into the actual module
	sources for Transactions, Splits, Accounts, and Books.  This
	allows QueryNew searches for Splits, Transactions, and Accounts.

	* gnc-engine.c: call the registration functions for Splits,
	Transactions, Accounts, and Books to enable searching using the
	new search subsystem.
	
2002-05-23  David Hampton  <hampton@employees.org>

	* src/gnome/reconcile-list.c: Encapsulate all list sorting logic
	within the GNCReconcileList object.  Reconciliation lists are now
	sorted by clicking on the column titles, and sorts can be both
	increasing and decreasing.

	* src/gnome/window-reconcile.c: Remove all list sorting logic.

	* src/gnome-utils/gnc-amount-edit.c: Reparent the amount editor
	widget so it is based upon a GtkEntry.  This allows trivial
	GtkEntry <-> GncAmountEdit conversions.

	* src/gnome/dialog-fincalc.c: Clean up code that uses a
	GncAmountEdit widget as a GtkEntry widget.

	* src/gnome/dialog-find-transactions.c
	(gnc_ui_find_transactions_dialog_create): Make all the editable
	fields trigger the dialog default button when <enter> is pressed.

2002-05-21  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sx-from-trans.c (sxftd_get_end_info): Changed
	to do the strtoul before we free the data itself; fixes "can't